--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background: background: linear-gradient(135deg, #0f172a, #334155);
+  background: linear-gradient(135deg, #0f172a, #334155);
 
   color: #e5e7eb;
   line-height: 1.6;
